--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = logram
-version = 0.0.2
+version = 0.0.3
 author = Mutlucan Tokat
 author_email = mtokat1@gmail.com
 description = Send logging messages to different channels (only Telegram for now)
@@ -13,7 +13,8 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+packages = find:
 python_requires = >=3.7
 install_requires=
     python-telegram-bot>=13.7
-include_package_data = True
+include_package_data = true
